[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Jakub Bacic <jbacic@flyps.io>"]
readme = "README.md"
packages = [{include = "python_playground"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
